Revision history for Padre-Plugin-ClassSniff

0.02 unreleased
  - Renamed to the new Padre 0.43 PO naming scheme (azawawi)
  - Added translations:
    - Brazilian Portuguese (garu)
    - French (jquelin)
    - Polish (therek)
	- Chinese (Traditional) translation (BLUET)
	- Arabic (azawawi)
	- Spanish (brunov)
  - actually install the translations (RSN)

0.01    2009-03-19
  - Initial version
